# budge

./: README.md  budge.1  pyproject.toml  setup.sh
budge/: __init__.py  agent_template.py  ai.py  ailog.py  categorize.py  cheatsheet.py  cli.py  config.py  fetch.py  gitutil.py  hledger.py  journal.py  notify.py  plan.py  review.py  scaffold.py  setup_cmd.py  simplefin.py  util.py
budge/systemd/: budge-categorize.service.in  budge-categorize.timer.in  budge-fetch.service.in  budge-notify@.service.in  budge-push.service.in  budge-push.timer.in  budge-review-nudge.service.in  hledger-web.service.in  paisa.service.in
systemd/: budge-fetch.timer.in  budge-plan-nudge.timer.in  budge-push.service.in  budge-review-nudge.timer.in  paisa.service.in
tests/: conftest.py  test_categorizer.py  test_packaging.py  test_pipeline.py  test_review.py  test_review_interactive.py  test_setup_and_misc.py  test_wizard.py
